# saisho-py

./: .gitignore  Makefile  README.md  config.ini  pyproject.toml  ssh.conf.sample
saisho/: engine.py  main.py  server.py
saisho/commands/: build.py  clean.py  serve.py  sync.py  upload.py
